Better footer, fixed code line wrapping, misc stuff.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
  padding-top:50px;
 }
 
+pre {
+  word-wrap: normal;
+}
+
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
